# wavecraft

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  test-plan-temp.md
cli/: Cargo.toml  build.rs
cli/plugin-template/: .gitignore  LICENSE  README.md
cli/plugin-template/engine/: Cargo.toml
cli/sdk-template/: .gitignore  Cargo.toml.template  LICENSE  README.md
cli/sdk-template/engine/: Cargo.toml  Cargo.toml.template
cli/sdk-template/engine/.cargo/: config.toml
cli/sdk-template/engine/src/: lib.rs
cli/sdk-template/engine/xtask/: Cargo.toml.template
cli/sdk-template/ui/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
cli/sdk-template/ui/src/: App.tsx  index.css
cli/sdk-templates/new-project/react/: README.md
cli/src/: main.rs  sdk_detect.rs  validation.rs
cli/src/commands/: bundle.rs  bundle_command.rs  create.rs  extract_params.rs  extract_processors.rs  mod.rs  new.rs  start.rs  update.rs
cli/src/commands/bundle/: bundle_runner.rs  engine_build.rs  install.rs  metadata_refresh.rs  project_root.rs  ui_assets.rs
cli/src/commands/start/: audio_runtime.rs  metadata_cache.rs  preflight.rs  reload_extractors.rs  shutdown.rs  startup_pipeline.rs  tsconfig_paths.rs
cli/src/commands/update/: project_update.rs  self_update.rs  summary.rs
cli/src/dev_server/: host.rs  loader.rs  meter.rs  mod.rs  rebuild.rs  session.rs  watcher.rs
cli/src/project/: detection.rs  dylib.rs  mod.rs  param_extract.rs  ts_codegen.rs
cli/src/template/: dependency_rewrites.rs  extract.rs  mod.rs  overrides.rs  tsconfig_paths.rs  variables.rs
cli/template/: Cargo.toml  README.md
cli/template/engine/: Cargo.toml
cli/template/engine/src/: lib.rs
cli/template/engine/xtask/: Cargo.toml
cli/template/ui/: package.json  vite.config.ts
cli/template/ui/src/: App.tsx
cli/tests/: bundle_command.rs  create_command.rs  update_command.rs  version_flag.rs
dev-server/: Cargo.toml
dev-server/src/: host.rs  lib.rs  session.rs
dev-server/src/audio/: atomic_params.rs  ffi_processor.rs  mod.rs  server.rs  status.rs
dev-server/src/audio/server/: device_setup.rs  input_pipeline.rs  metering.rs  output_modifiers.rs  output_routing.rs  startup_wiring.rs
dev-server/src/reload/: guard.rs  mod.rs  rebuild.rs  watcher.rs
dev-server/src/ws/: mod.rs
dev-server/tests/: audio_status_startup_failures.rs  reload_cancellation.rs
docs/: backlog.md  (+1 more)
engine/: Cargo.toml
engine/crates/bridge/: Cargo.toml
engine/crates/bridge/src/: error.rs  handler.rs  lib.rs
engine/crates/desktop/: Cargo.toml
engine/crates/desktop/src/: app.rs  assets.rs  lib.rs  main.rs  webview.rs
engine/crates/desktop/tests/: integration_test.rs  latency_bench.rs
engine/crates/dsp/: Cargo.toml
engine/crates/dsp/src/: gain.rs  lib.rs  processor.rs
engine/crates/metering/: Cargo.toml
engine/crates/metering/src/: lib.rs
engine/crates/plugin/: Cargo.toml
engine/crates/plugin/src/: editor.rs  lib.rs  params.rs
engine/crates/protocol/: Cargo.toml
engine/crates/protocol/src/: ipc.rs  lib.rs  params.rs
engine/crates/standalone/: Cargo.toml  README.md
engine/crates/standalone/src/: app.rs  assets.rs  lib.rs  main.rs  webview.rs  ws_server.rs
engine/crates/standalone/tests/: integration_test.rs  latency_bench.rs
engine/crates/vstkit-bridge/: Cargo.toml
engine/crates/vstkit-bridge/src/: error.rs  handler.rs  host.rs  lib.rs
engine/crates/vstkit-core/: Cargo.toml
engine/crates/vstkit-core/src/: lib.rs  macros.rs  params.rs  prelude.rs  util.rs
engine/crates/vstkit-core/tests/: macro_tests.rs  trybuild.rs
engine/crates/vstkit-dsp/: Cargo.toml
engine/crates/vstkit-dsp/src/: lib.rs  traits.rs
engine/crates/vstkit-metering/: Cargo.toml
engine/crates/vstkit-protocol/: Cargo.toml
engine/crates/vstkit-protocol/src/: lib.rs  macros.rs  params.rs
engine/crates/wavecraft-bridge/: Cargo.toml
engine/crates/wavecraft-bridge/src/: error.rs  handler.rs  host.rs  in_memory_host.rs  lib.rs  plugin_loader.rs
engine/crates/wavecraft-core/: Cargo.toml
engine/crates/wavecraft-core/src/: lib.rs  macros.rs  params.rs  prelude.rs  util.rs
engine/crates/wavecraft-core/tests/: dsl_plugin_macro.rs  processor_macro.rs
engine/crates/wavecraft-dev-server/: Cargo.toml  README.md
engine/crates/wavecraft-dev-server/src/: assets.rs  atomic_params.rs  audio_server.rs  ffi_processor.rs  lib.rs  main.rs  webview.rs  ws_server.rs
engine/crates/wavecraft-dev-server/tests/: integration_test.rs  latency_bench.rs
engine/crates/wavecraft-dsp/: Cargo.toml
engine/crates/wavecraft-dsp/src/: gain.rs  lib.rs  processor.rs  traits.rs
engine/crates/wavecraft-dsp/tests/: chain_macro.rs  chain_param_extraction.rs
engine/crates/wavecraft-example/: Cargo.toml
engine/crates/wavecraft-example/src/: lib.rs
engine/crates/wavecraft-macros/: Cargo.toml
engine/crates/wavecraft-macros/src/: lib.rs  plugin.rs  processor_params.rs
engine/crates/wavecraft-macros/tests/: processor_params.rs
engine/crates/wavecraft-metering/: Cargo.toml
engine/crates/wavecraft-metering/src/: dev.rs  lib.rs
engine/crates/wavecraft-nih_plug/: Cargo.toml
engine/crates/wavecraft-nih_plug/src/: lib.rs  macros.rs  prelude.rs  util.rs
engine/crates/wavecraft-processors/: Cargo.toml
engine/crates/wavecraft-processors/src/: gain.rs  lib.rs  oscillator.rs  oscilloscope.rs  passthrough.rs  saturator.rs  unified_filter.rs
engine/crates/wavecraft-protocol/: Cargo.toml
engine/signing/: entitlements-debug.plist  entitlements.plist
engine/xtask/: Cargo.toml
engine/xtask/src/: lib.rs  main.rs  test_support.rs  tests.rs
engine/xtask/tests/: sync_ui_versions.rs
packaging/macos/au-wrapper/: CMakeLists.txt  README.md
vstkit-plugin-template/: .gitignore  Cargo.toml  LICENSE  README.md
vstkit-plugin-template/engine/: Cargo.toml
vstkit-plugin-template/engine/src/: lib.rs
vstkit-plugin-template/ui/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
wavecraft-plugin-template/engine/: Cargo.toml
wavecraft-plugin-template/engine/src/: lib.rs
(+854 files in other folders)
