[package]
name = "wavecraft"
version = "0.8.0"
edition = "2021"
description = "CLI tool for creating Wavecraft audio plugins"
license = "MIT"
repository = "https://github.com/RonHouben/wavecraft"
keywords = ["audio", "vst", "clap", "plugin", "dsp"]
categories = ["development-tools", "multimedia::audio"]

[[bin]]
name = "wavecraft"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
console = "0.15"
indicatif = "0.17"
anyhow = "1.0"
walkdir = "2.4"
include_dir = "0.7"
regex = "1.10"
heck = "0.5"
chrono = "0.4"
syn = "2.0"
ctrlc = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3.8"

# Dev server dependencies
[dependencies.libloading]
version = "0.8"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.tokio]
version = "1"
features = ["full"]

# Engine crates (path dependencies)
[dependencies.wavecraft-protocol]
path = "../engine/crates/wavecraft-protocol"

[dependencies.wavecraft-bridge]
path = "../engine/crates/wavecraft-bridge"

[dependencies.standalone]
path = "../engine/crates/standalone"

