[package]
name = "wavecraft"
version = "0.9.1"
edition = "2021"
build = "build.rs"
description = "CLI tool for creating Wavecraft audio plugins"
license = "MIT"
repository = "https://github.com/RonHouben/wavecraft"
keywords = ["audio", "vst", "clap", "plugin", "dsp"]
categories = ["development-tools", "multimedia::audio"]

[[bin]]
name = "wavecraft"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
console = "0.15"
indicatif = "0.17"
anyhow = "1.0"
walkdir = "2.4"
include_dir = "0.7"
regex = "1.10"
heck = "0.5"
chrono = "0.4"
syn = "2.0"
ctrlc = "3"
serde_json = "1.0"
notify = "7"
notify-debouncer-full = "0.4"
command-group = "5.0"
which = "7"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[dependencies.toml]
version = "0.8"

[dependencies.tokio]
version = "1"
features = ["full"]

# Engine crates (path dependencies)
# NOTE: `cargo xtask validate-cli-deps` validates these wavecraft-* dependencies
# for version fields and publishability. Run locally or via the CD pipeline.
# Adding or removing engine crate dependencies here does NOT require workflow updates.
[dependencies.wavecraft-protocol]
path = "../engine/crates/wavecraft-protocol"
version = "0.12.0"

[dependencies.wavecraft-bridge]
path = "../engine/crates/wavecraft-bridge"
version = "0.12.0"

[dependencies.wavecraft-dev-server]
path = "../dev-server"
version = "0.12.1"
default-features = false

[features]
default = ["audio-dev"]
audio-dev = ["wavecraft-dev-server/audio"]

