[package]
name = "wavecraft-dev-server"
version = "0.12.1"
edition = "2024"
license = "MIT"
authors = ["Wavecraft Team"]
description = "Unified development server for Wavecraft plugin UI testing"
repository = "https://github.com/RonHouben/wavecraft"
publish = false

[dependencies]
# Engine crates
wavecraft-bridge = { path = "../engine/crates/wavecraft-bridge", version = "0.12.1" }
wavecraft-protocol = { path = "../engine/crates/wavecraft-protocol", version = "0.12.1" }

# Serialization
serde_json = "1.0"

# Logging
tracing = "0.1"

# Atomic parameter storage
atomic_float = "1.1"

# WebSocket server
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "signal", "process", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# File watching (hot-reload)
notify = "7"
notify-debouncer-full = "0.4"

# Process management
command-group = "5.0"
anyhow = "1.0"

# Display / logging
chrono = "0.4"
console = "0.15"

# Audio I/O (optional)
cpal = { version = "0.15", optional = true }
rtrb = { version = "0.3", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[features]
default = ["audio"]
audio = ["cpal", "rtrb"]
