[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.12.1"
edition = "2024"
license = "MIT"
authors = ["Wavecraft Team"]
repository = "https://github.com/RonHouben/wavecraft"

[workspace.dependencies]
# nih-plug framework - pinned to specific commit for stability
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Internal crates (publishable - version required for crates.io)
wavecraft-protocol = { path = "crates/wavecraft-protocol", version = "0.12.1" }
wavecraft-dsp = { path = "crates/wavecraft-dsp", version = "0.12.1" }
wavecraft-bridge = { path = "crates/wavecraft-bridge", version = "0.12.1" }
wavecraft-macros = { path = "crates/wavecraft-macros", version = "0.12.1" }
wavecraft-core = { path = "crates/wavecraft-core", version = "0.12.1" }
wavecraft-metering = { path = "crates/wavecraft-metering", version = "0.12.1" }

# Internal crates (not published to crates.io)
wavecraft-nih_plug = { path = "crates/wavecraft-nih_plug" }

[profile.release]
lto = "thin"
strip = true

# Release build with debug symbols for profiling
[profile.release-debug]
inherits = "release"
debug = true
strip = false
