[workspace]
members = ["engine", "engine/xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_USERNAME/YOUR_PLUGIN_NAME"

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.profiling]
inherits = "release"
strip = "none"
debug = true
