[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
clap = { version = "4", features = ["derive", "color"] }
anyhow = "1"
colored = "2"
which = "6"
fs_extra = "1"
dirs = "5"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ctrlc = "3"

[dev-dependencies]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
