[package]
name = "wavecraft-dev-template"
version.workspace = true
edition.workspace = true
license = "MIT"
authors = ["Wavecraft SDK <dev@wavecraft.dev>"]
homepage = "https://github.com/RonHouben/wavecraft"

[lib]
name = "wavecraft_dev_template"
crate-type = ["cdylib"]

[dependencies]
# Single SDK dependency — Cargo rename gives us `use wavecraft::prelude::*`
wavecraft = { package = "wavecraft-nih_plug", path = "../../engine/crates/wavecraft-nih_plug" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# DSP crate for processors (needed by dev-audio binary)
wavecraft-dsp = { path = "../../engine/crates/wavecraft-dsp", optional = true }

# Development audio server dependencies (optional, only used by dev-audio binary)
wavecraft-dev-server = { package = "wavecraft-dev-server", path = "../../dev-server", features = ["audio"], optional = true }
cpal = { version = "0.15", optional = true }
anyhow = { version = "1.0", optional = true }
env_logger = { version = "0.11", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[build-dependencies]
# Note: Use the nih_plug_xtask from wavecraft's dependency tree
# This ensures version consistency with the Wavecraft SDK
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }

[features]
default = []
_param-discovery = []   # Internal: used by `wavecraft start` for fast param loading
