[package]
name = "{{plugin_name}}"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "{{plugin_name_snake}}"
crate-type = ["cdylib"]

[dependencies]
# Wavecraft SDK dependencies (version-locked to {{sdk_version}})
wavecraft-core = { git = "https://github.com/RonHouben/wavecraft", tag = "{{sdk_version}}" }
wavecraft-protocol = { git = "https://github.com/RonHouben/wavecraft", tag = "{{sdk_version}}" }
wavecraft-dsp = { git = "https://github.com/RonHouben/wavecraft", tag = "{{sdk_version}}" }
wavecraft-bridge = { git = "https://github.com/RonHouben/wavecraft", tag = "{{sdk_version}}" }
wavecraft-metering = { git = "https://github.com/RonHouben/wavecraft", tag = "{{sdk_version}}" }

# Note: nih-plug MUST be present for derive macros to work (Params, etc.)
# Use the EXACT same version as wavecraft-core to avoid type conflicts
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

[build-dependencies]
# Note: Use the nih_plug_xtask from wavecraft-core's dependency tree
# This ensures version consistency with the Wavecraft SDK
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }

