[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Desktop POC for WebView integration"

[[bin]]
name = "desktop"
path = "src/main.rs"

[dependencies]
bridge = { path = "../bridge" }
protocol = { path = "../protocol" }
wry = "0.47"
tao = "0.30"
include_dir = "0.7"
serde_json = "1.0"

# For atomic parameter storage
atomic_float = "1.1"
parking_lot = "0.12"
