[package]
name = "vstkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VstKit audio plugin - nih-plug VST3/CLAP integration"

[lib]
name = "vstkit"
crate-type = ["cdylib"]

[features]
default = []
# Enable runtime allocation detection on audio thread (debug builds)
assert_process_allocs = ["nih_plug/assert_process_allocs"]

[dependencies]
protocol.workspace = true
dsp.workspace = true
metering.workspace = true
nih_plug.workspace = true
nih_plug_egui.workspace = true
