[package]
name = "vstkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VstKit audio plugin - nih-plug VST3/CLAP integration"

[lib]
name = "vstkit"
crate-type = ["cdylib"]

[features]
default = []
# Enable WebView-based editor (React UI)
webview_editor = []
# Enable runtime allocation detection on audio thread (debug builds)
assert_process_allocs = ["nih_plug/assert_process_allocs"]

[dependencies]
protocol.workspace = true
dsp.workspace = true
metering.workspace = true
bridge.workspace = true
nih_plug.workspace = true
nih_plug_egui.workspace = true
wry = { version = "0.47", default-features = false, features = ["os-webview"] }
raw-window-handle = "0.6"
serde_json = "1.0"
include_dir = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = "0.2"
block2 = "0.5"
