[package]
name = "standalone"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Standalone app for plugin development and testing"

[[bin]]
name = "standalone"
path = "src/main.rs"

[dependencies]
bridge = { path = "../bridge" }
vstkit-protocol = { path = "../vstkit-protocol" }
wry = "0.47"
tao = "0.30"
include_dir = "0.7"
serde_json = "1.0"

# For atomic parameter storage
atomic_float = "1.1"
parking_lot = "0.12"

# WebSocket server dependencies
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "signal"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
