[package]
name = "vstkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VstKit audio plugin - nih-plug VST3/CLAP integration"

[lib]
name = "vstkit_core"
crate-type = ["cdylib"]

[features]
default = []
# Enable runtime allocation detection on audio thread (debug builds)
assert_process_allocs = ["nih_plug/assert_process_allocs"]

[dependencies]
vstkit-protocol.workspace = true
vstkit-dsp.workspace = true
vstkit-metering.workspace = true
vstkit-bridge.workspace = true
nih_plug.workspace = true
wry = { version = "0.47", default-features = false, features = ["os-webview"] }
raw-window-handle = "0.6"
serde_json = "1.0"
include_dir = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = "0.2"
objc2-web-kit = "0.2"
block2 = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
] }
webview2-com = "0.33"
