[package]
name = "wavecraft-bridge"
version = "0.7.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "IPC bridge for WebView ↔ Rust communication"

[dependencies]
wavecraft-protocol = { path = "../wavecraft-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
