[package]
name = "wavecraft-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Wavecraft audio plugin SDK - core types and macros"

[lib]
name = "wavecraft_core"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
wavecraft-protocol.workspace = true
wavecraft-dsp.workspace = true
wavecraft-metering.workspace = true
wavecraft-bridge.workspace = true
wavecraft-macros.workspace = true

# Used by macro helper to construct identifiers
paste = "1.0"
