[package]
name = "wavecraft-dev-server"
version = "0.7.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Development server for Wavecraft plugin UI testing"
repository = "https://github.com/RonHouben/wavecraft"
homepage = "https://github.com/RonHouben/wavecraft"
documentation = "https://github.com/RonHouben/wavecraft/blob/main/README.md"
publish = true

[[bin]]
name = "wavecraft-dev-server"
path = "src/main.rs"

[dependencies]
wavecraft-bridge = { path = "../wavecraft-bridge", version = "0.7.3" }
wavecraft-protocol = { path = "../wavecraft-protocol", version = "0.7.3" }
wry = "0.47"
tao = "0.30"
include_dir = "0.7"
serde_json = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# For atomic parameter storage
atomic_float = "1.1"
parking_lot = "0.12"

# WebSocket server dependencies
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "signal"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
