[package]
name = "wavecraft-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure DSP algorithms for Wavecraft - no plugin framework dependencies"

[dependencies]
wavecraft-protocol.workspace = true
wavecraft-macros.workspace = true
