[package]
name = "wavecraft-dsp"
version = "0.7.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure DSP algorithms for Wavecraft - no plugin framework dependencies"

[dependencies]
wavecraft-protocol.workspace = true
wavecraft-macros.workspace = true
