[package]
name = "wavecraft-macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.6"

[dev-dependencies]
wavecraft-dsp = { path = "../wavecraft-dsp" }
