[package]
name = "wavecraft-macros"
version = "0.10.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Procedural macros for Wavecraft plugin DSL"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.6"

[dev-dependencies]
wavecraft-dsp = { path = "../wavecraft-dsp" }
