[package]
name = "wavecraft-metering"
version = "0.10.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Real-time safe SPSC metering for Wavecraft audio plugins"

[dependencies]
# Lock-free SPSC ring buffer for real-time audio→UI metering
rtrb = "0.3"
wavecraft-protocol.workspace = true
