[package]
name = "wavecraft-nih_plug"
description = "Wavecraft nih-plug integration layer (not published to crates.io)"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wavecraft-core.workspace = true
wavecraft-dsp.workspace = true
wavecraft-processors.workspace = true
wavecraft-protocol.workspace = true
wavecraft-metering.workspace = true
wavecraft-bridge.workspace = true
wavecraft-macros.workspace = true
nih_plug.workspace = true
wry = { version = "0.47", default-features = false, features = ["os-webview"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
include_dir = "0.7"
mime_guess = "2.0"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = "0.2"
objc2-web-kit = "0.2"
block2 = "0.5"
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
include_dir = "0.7"
mime_guess = "2.0"
raw-window-handle = "0.6"
webview2-com = "0.33"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[features]
default = []
_param-discovery = ["wavecraft-core/_param-discovery"]
