[package]
name = "wavecraft-protocol"
version = "0.12.6"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared parameter definitions and contracts for Wavecraft"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"  # For macro identifier concatenation
