# CMakeLists.txt for VstKit AU (AUv2) wrapper
#
# This uses clap-wrapper to convert the VstKit CLAP plugin to an Audio Unit v2 plugin
# for use in GarageBand, Logic Pro, and other AU-compatible hosts on macOS.
#
# Build instructions:
#   cd packaging/macos/au-wrapper
#   cmake -B build
#   cmake --build build
#
# The output VstKit.component will be in build/ directory.
# Install to ~/Library/Audio/Plug-Ins/Components/ for testing.

cmake_minimum_required(VERSION 3.21)

project(VstKit-AUWrapper
    VERSION 0.1.0
    LANGUAGES C CXX OBJC OBJCXX
)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# macOS deployment target
if(NOT DEFINED CMAKE_OSX_DEPLOYMENT_TARGET)
    set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum macOS version")
endif()

# Build universal binary if not specified
if(NOT DEFINED CMAKE_OSX_ARCHITECTURES)
    set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64" CACHE STRING "Build architectures")
endif()

# --------------------------------------------------------------------------
# Configuration
# --------------------------------------------------------------------------

# Plugin metadata (must match CLAP plugin)
set(VSTKIT_OUTPUT_NAME "VstKit")
set(VSTKIT_BUNDLE_IDENTIFIER "dev.vstkit.vstkit")
set(VSTKIT_BUNDLE_VERSION "0.1.0")

# AU-specific 4-character codes (must be unique)
# These are registered with Apple for your organization
set(VSTKIT_MANUFACTURER_CODE "VstK")  # 4-char manufacturer code
set(VSTKIT_MANUFACTURER_NAME "VstKit Team")
# Note: When using MACOS_EMBEDDED_CLAP_LOCATION, clap-wrapper auto-generates
# the subtype code from the CLAP ID hash. The actual subtype will be "G0CJ".
set(VSTKIT_SUBTYPE_CODE "vsk1")       # 4-char subtype code (overridden by clap-wrapper)
set(VSTKIT_INSTRUMENT_TYPE "aufx")    # aufx = effect, aumu = instrument

# Path to the built CLAP plugin (relative to this CMakeLists.txt)
# Adjust this path based on where cargo xtask bundle outputs the CLAP
set(VSTKIT_CLAP_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../engine/target/bundled/VstKit.clap")

# Convert to absolute path
get_filename_component(VSTKIT_CLAP_PATH_ABS "${VSTKIT_CLAP_PATH}" ABSOLUTE)

# --------------------------------------------------------------------------
# Fetch clap-wrapper
# --------------------------------------------------------------------------

include(FetchContent)

# Fetch clap-wrapper from GitHub
FetchContent_Declare(
    clap-wrapper
    GIT_REPOSITORY https://github.com/free-audio/clap-wrapper.git
    GIT_TAG main
)

# clap-wrapper options
set(CLAP_WRAPPER_BUILD_AUV2 ON CACHE BOOL "" FORCE)
set(CLAP_WRAPPER_BUILD_VST3 OFF CACHE BOOL "" FORCE)
set(CLAP_WRAPPER_BUILD_STANDALONE OFF CACHE BOOL "" FORCE)
set(CLAP_WRAPPER_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(CLAP_WRAPPER_DOWNLOAD_DEPENDENCIES ON CACHE BOOL "" FORCE)

FetchContent_MakeAvailable(clap-wrapper)

# --------------------------------------------------------------------------
# Create the AU wrapper target
# --------------------------------------------------------------------------

# Create a MODULE library for the AU
add_library(${VSTKIT_OUTPUT_NAME}-au MODULE)

# Add the AUv2 wrapper
target_add_auv2_wrapper(
    TARGET ${VSTKIT_OUTPUT_NAME}-au
    OUTPUT_NAME "${VSTKIT_OUTPUT_NAME}"
    BUNDLE_IDENTIFIER "${VSTKIT_BUNDLE_IDENTIFIER}"
    BUNDLE_VERSION "${VSTKIT_BUNDLE_VERSION}"
    MANUFACTURER_NAME "${VSTKIT_MANUFACTURER_NAME}"
    MANUFACTURER_CODE "${VSTKIT_MANUFACTURER_CODE}"
    SUBTYPE_CODE "${VSTKIT_SUBTYPE_CODE}"
    INSTRUMENT_TYPE "${VSTKIT_INSTRUMENT_TYPE}"
    MACOS_EMBEDDED_CLAP_LOCATION "${VSTKIT_CLAP_PATH_ABS}"
)

# --------------------------------------------------------------------------
# Installation
# --------------------------------------------------------------------------

# Optional: Install to the user's Audio Units folder
set(AU_INSTALL_DIR "$ENV{HOME}/Library/Audio/Plug-Ins/Components")

add_custom_target(install-au
    COMMAND ${CMAKE_COMMAND} -E echo "Installing ${VSTKIT_OUTPUT_NAME}.component to ${AU_INSTALL_DIR}"
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "$<TARGET_BUNDLE_DIR:${VSTKIT_OUTPUT_NAME}-au>"
        "${AU_INSTALL_DIR}/${VSTKIT_OUTPUT_NAME}.component"
    COMMAND killall -9 AudioComponentRegistrar || true
    DEPENDS ${VSTKIT_OUTPUT_NAME}-au
    COMMENT "Installing AU plugin and refreshing macOS plugin cache"
)

# --------------------------------------------------------------------------
# Validation helper
# --------------------------------------------------------------------------

# Note: The subtype "G0CJ" is auto-generated by clap-wrapper from the CLAP ID hash
# This is expected behavior when using MACOS_EMBEDDED_CLAP_LOCATION
add_custom_target(validate-au
    COMMAND ${CMAKE_COMMAND} -E echo "Running auval validation..."
    COMMAND auval -v ${VSTKIT_INSTRUMENT_TYPE} G0CJ ${VSTKIT_MANUFACTURER_CODE}
    DEPENDS install-au
    COMMENT "Validating AU plugin with auval"
)

# --------------------------------------------------------------------------
# Print configuration summary
# --------------------------------------------------------------------------

message(STATUS "")
message(STATUS "=== VstKit AU Wrapper Configuration ===")
message(STATUS "Output Name:        ${VSTKIT_OUTPUT_NAME}")
message(STATUS "Bundle ID:          ${VSTKIT_BUNDLE_IDENTIFIER}")
message(STATUS "Bundle Version:     ${VSTKIT_BUNDLE_VERSION}")
message(STATUS "Manufacturer:       ${VSTKIT_MANUFACTURER_NAME} (${VSTKIT_MANUFACTURER_CODE})")
message(STATUS "Subtype:            ${VSTKIT_SUBTYPE_CODE}")
message(STATUS "Type:               ${VSTKIT_INSTRUMENT_TYPE}")
message(STATUS "CLAP Source:        ${VSTKIT_CLAP_PATH_ABS}")
message(STATUS "")
message(STATUS "Build with:         cmake --build build")
message(STATUS "Install with:       cmake --build build --target install-au")
message(STATUS "Validate with:      cmake --build build --target validate-au")
message(STATUS "  or manually:      auval -v aufx G0CJ VstK (subtype auto-generated from CLAP ID)")
message(STATUS "========================================")
message(STATUS "")
